# src/routers/perpetual/health.rs
@@ -1,4 +1,4 @@
-use crate::error::{CryptPassError, CryptPassErrorResponse};
+use crate::error::{CryptPassError, CryptPassErrorDetails};
 use axum::Json;
 use serde::Serialize;
 use utoipa::ToSchema;
@@ -13,7 +13,7 @@ pub(crate) struct Health {
     description = "Application health check results",
     responses(
         (status = 200, description = "Health Response", body = Health),
-        (status = 500, description = "Internal server error", body = CryptPassErrorResponse),
+        (status = 500, description = "Internal server error", body = CryptPassErrorDetails),
     ),
     security(),
 )]
